k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 3xbat
  labels:
    name: 3xbat
    app: betting-platform
